css/parser/tests/errors/percent/dot/output.stderr
error: Expected a property value
 --> $DIR/tests/errors/percent/dot/input.css:1:11
  |
1 | a { width: 0.%; }
  |           ^^^^

